fixed Arrow buttons cut off on the carousel for 1280 width devices

--- a/packages/beauty-portal-theme/src/globalStyles.css
+++ b/packages/beauty-portal-theme/src/globalStyles.css
@@ -128,11 +128,18 @@ figure img {
   margin-right: -10px;
   margin-left: -10px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (max-width: 1280px) {
+  .bp-container {
+    max-width: 1100px;
+  }
+}
+
+@media (min-width: 1281px) {
   .bp-container {
     max-width: 1160px;
   }
 }
+
 .pr10 {
   padding-right: 10px;
 }
